@@ -1,5 +1,10 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.476 2005/12/20 17:05:39 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.477 2005/12/20 20:30:47 wolf31o2 Exp $
+
+  20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-controller.sh:
+  It looks like gcc-config/binutils-config needs to be run with the full path,
+  since it is run outside of the chroot.
 
   20 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/stage1/stage1-controller.sh:
